--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -5,8 +5,8 @@
 // only as information/reference.
 
 // Server Communication username and password.
-userid: s1
-passwd: p1
+userid: server
+passwd: server
 
 // Server name, use alternative character such as ASCII 160 for spaces.
 // NOTE: Do not use spaces or any of these characters which are not allowed in
@@ -15,13 +15,13 @@ passwd: p1
 server_name: rAthena
 
 // Wisp name for server: used to send wisp from server to players (between 4 to 23 characters)
-wisp_server_name: Server
+wisp_server_name: Test
 
 // Login Server IP
 // The character server connects to the login server using this IP address.
 // NOTE: This is useful when you are running behind a firewall or are on
 // a machine with multiple interfaces.
-//login_ip: 127.0.0.1
+login_ip: 127.0.0.1
 
 // The character server listens on the interface with this IP address.
 // NOTE: This allows you to run multiple servers on multiple interfaces
@@ -34,7 +34,7 @@ login_port: 6900
 // Character Server IP
 // The IP address which clients will use to connect.
 // Set this to what your server's public IP address is.
-//char_ip: 127.0.0.1
+char_ip: 35.247.159.108
 
 // Character Server Port
 char_port: 6121
@@ -195,7 +195,7 @@ char_del_restriction: 3
 // 2: Only summoner is allowed to be created
 // 3: Both novice and summoner can be created (renewal default)
 // Uncomment to customize the restriction
-//allowed_job_flag: 3
+allowed_job_flag: 1
 
 // What folder the DB files are in (item_db.txt, etc.)
 db_path: db
