--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -28,39 +28,39 @@ party_share_level: 15
 // MySQL Login server
 login_server_ip: 127.0.0.1
 login_server_port: 3306
-login_server_id: ragnarok
-login_server_pw: ragnarok
-login_server_db: ragnarok
+login_server_id: Ragnarok
+login_server_pw: ragmarok666
+login_server_db: Ragnarok
 login_codepage:
 login_case_sensitive: no
 
 ipban_db_ip: 127.0.0.1
 ipban_db_port: 3306
-ipban_db_id: ragnarok
-ipban_db_pw: ragnarok
-ipban_db_db: ragnarok
+ipban_db_id: Ragnarok
+ipban_db_pw: ragmarok666
+ipban_db_db: Ragnarok
 ipban_codepage:
 
 // MySQL Character server
 char_server_ip: 127.0.0.1
 char_server_port: 3306
-char_server_id: ragnarok
-char_server_pw: ragnarok
-char_server_db: ragnarok
+char_server_id: Ragnarok
+char_server_pw: ragmarok666
+char_server_db: Ragnarok
 
 // MySQL Map Server
 map_server_ip: 127.0.0.1
 map_server_port: 3306
-map_server_id: ragnarok
-map_server_pw: ragnarok
-map_server_db: ragnarok
+map_server_id: Ragnarok
+map_server_pw: ragmarok666
+map_server_db: Ragnarok
 
 // MySQL Log Database
 log_db_ip: 127.0.0.1
 log_db_port: 3306
-log_db_id: ragnarok
-log_db_pw: ragnarok
-log_db_db: ragnarok
+log_db_id: Ragnarok
+log_db_pw: ragmarok666
+log_db_db: Ragnarok
 log_codepage:
 log_login_db: loginlog
 
