--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -60,7 +60,7 @@ log_db_ip: 127.0.0.1
 log_db_port: 3306
 log_db_id: Ragnarok
 log_db_pw: ragmarok666
-log_db_db: Ragnarok
+log_db_db: log
 log_codepage:
 log_login_db: loginlog
 
