added gm channel

--- a/conf/channels.conf
+++ b/conf/channels.conf
@@ -118,4 +118,22 @@ channel_config: {
 		leave: true
 		chat: true
 	}
+	
+	/**
+	 * Channel config for GM channel
+	 * For the structure, see the 'channels' above
+	 **/
+	gm: {
+		name: "#gm"
+		alias: "[GMchat]"
+		color: "Purple"
+		type: "CHAN_TYPE_PUBLIC"
+		autojoin: true
+		delay: 1000
+		leave: false
+		chat: true
+		color_override: false
+		join_notif: true
+		groupid: (50,60,80,99)
+	}
 }
