--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -86,8 +86,13 @@ groups: (
 	level: 0
 	inherit: ( /*empty list*/ )
 	commands: {
-		changedress: true
-		resurrect: true
+		rates: true
+		time: true
+		refresh: true
+		showexp: true
+		commands: true
+		autotrade: true
+		join: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
@@ -95,131 +100,7 @@ groups: (
 		can_trade: true
 		can_party: true
 		attendance: true
-	}
-},
-{
-	id: 1
-	name: "Super Player"
-	inherit: ( "Player" ) /* can do everything Players can and more */
-	level: 0
-	commands: {
-		/* informational commands */
-		commands: true
-		charcommands: true
-		help: true
-		rates: true
-		uptime: true
-		showdelay: true
-		exp: true
-		mobinfo: true
-		iteminfo: true
-		whodrops: true
-		time: true
-		jailtime: true
-		hominfo: true
-		homstats: true
-		showexp: true
-		showzeny: true
-		whereis: true
-		/* feature commands */
-		refresh: true
-		noask: true
-		noks: true
-		autoloot: true
-		alootid: true
-		autoloottype: true
-		autotrade: true
-		request: true
-		go: true
-		breakguild: true
-		channel: true
-		langtype: true
-	}
-	permissions: {
-		attendance: false
-	}
-},
-{
-	id: 2
-	name: "Support"
-	inherit: ( "Super Player" )
-	level: 1
-	commands: {
-		version: true
-		where: true
-		jumpto: true
-		who: true
-		who2: true
-		who3: true
-		whomap: true
-		whomap2: true
-		whomap3: true
-		users: true
-		broadcast: true
-		localbroadcast: true
-	}
-	log_commands: true
-	permissions: {
-		receive_requests: true
-		view_equipment: true
-	}
-},
-{
-	id: 3
-	name: "Script Manager"
-	inherit: ( "Support" )
-	level: 1
-	commands: {
-		tonpc: true
-		hidenpc: true
-		shownpc: true
-		loadnpc: true
-		unloadnpc: true
-		npcmove: true
-		addwarp: true
-	}
-	log_commands: true
-	permissions: {
-		any_warp: true
-	}
-},
-{
-	id: 4
-	name: "Event Manager"
-	inherit: ( "Support" )
-	level: 1
-	commands: {
-		monster: true
-		monstersmall: true
-		monsterbig: true
-		killmonster2: true
-		cleanarea: true
-		cleanmap: true
-		item: [true, true]
-		zeny: [true, true]
-		disguise: [true, true]
-		undisguise: [true, true]
-		size: [true, true]
-		raise: true
-		raisemap: true
-		day: true
-		night: true
-		skillon: true
-		skilloff: true
-		pvpon: true
-		pvpoff: true
-		gvgon: true
-		gvgoff: true
-		allowks: true
-		me: true
-		marry: true
-		divorce: true
-		refreshall: true
-	}
-	log_commands: true
-	permissions: {
-		can_trade: false
-		any_warp: true
+		disable_commands_when_dead: true
 	}
 },
 {
@@ -228,74 +109,224 @@ groups: (
 	inherit: ( "Player" ) /* can do everything Players can */
 	level: 0
 	commands: {
-		rates: true
-		who: true
 	}
 	permissions: {
 		/* no permissions by default */
 	}
 },
 {
-	id: 10
-	name: "Law Enforcement"
-	inherit: ( "Support" )
-	level: 2
+	id: 20
+	name: "Support"
+	inherit: ( "Super Player" )
+	level: 1
 	commands: {
-		hide: true
-		follow: true
-		kick: true
-		disguise: true
-		fakename: true
-		option: true
-		speed: true
-		warp: true
-		kill: true
-		recall: true
-		ban: true
-		block: true
-		jail: true
-		jailfor: true
-		mute: true
-		storagelist: true
-		cartlist: true
-		itemlist: true
-		stats: true
+		mobinfo: true
+		iteminfo: true
+		whodrops: true
+		idsearch: true
+		whereis: true
+		whogm: true
+		jumpto: true
+		request: true
 	}
 	log_commands: true
 	permissions: {
+		/* no permissions by default */
+	}
+},
+{
+	id: 50
+	name: "Event GM"
+	inherit: ( "Support" )
+	level: 50
+	commands: {
+		pvpon: true
+		pvpoff: true
+		gvgon: true
+		gvgoff: true
+		skillon: true
+		skilloff: true
+		charcommands: true
+		help: true
+		whomap: true
+		whomap2: true
+		monstersmall: true
+		save: [true,true]
+		load: [true,true]
+		jump: true
+		go: true
+		warp: true
+		memo: true
+		tonpc: true
+		recall: true
+		heal:   [true,true]
+		alive:  [true,true]
+		raisemap: true
+		disguise: [true,true]
+		undisguise: [true,true]
+		monsterignore: true
+		broadcast: true
+		localbroadcast: true
+		kill: true
+		doommap: true
+		mutearea: true
+		partyrecall: true
+		disguiseguild: true
+		undisguiseguild: true
+		sizeguild: true
+		guildrecall: true
+	}
+	log_commands: true
+	permissions: {
+		can_trade: false
+		attendance: false
+		any_warp: true
+		receive_requests: true
+		view_hpmeter: true
+		hack_info: true
+		disable_pvm: true
+		disable_commands_when_dead: false
+		who_display_aid: false
+	}
+},
+{
+	id: 60
+	name: "GM"
+	inherit: ( "Event GM" )
+	level: 60
+	commands: {
+		refreshall: true
+		showdelay: [true,true]
+		noask: [true,true]
+		noks: [true,true]
+		allowks: true
+		addwarp: true
+		mapinfo: true
+		autoloot: true
+		mobsearch: true
+		showmobs: true
+		exp: [true,true]
+		stats: true
+		storagelist: [true,true]
+		cartlist: [true,true]
+		itemlist: [true,true]
+		who: true
+		who2: true
+		who3: true
+		whomap3: true
+		users: true
+		where: true
+		jailtime: true
+		accinfo: true
+		me: true
+		storage: [true,true]
+		identify: [true,true]
+		identifyall:  [true,true]
+		trade: true
+		clone: true
+		slaveclone: true
+		evilclone: true
+		repairall: [true,true]
+		storeall: true
+		itemreset: true
+		clearstorage: true
+		cleargstorage: true
+		clearcart: true
+		cleanarea: true
+		cleanmap: true
+		follow: [true,true]
+		killer: [true,true]
+		killable: [true,true]
+		resetstat: true
+		resetskill: true
+		reset: true
+		mount: [true,true]
+		mount2: true
+		size: [true,true]
+		duel: [true,true]
+		invite: [true,true]
+		accept: [true,true]
+		reject: [true,true]
+		leave: [true,true]
+		cart: [true,true]
+		clonestat: [true,true]
+		mary: true
+		divorce: true
+		adopt: true
+		gmotd: true
+		nuke: true
+		mute: true
+		unmute: true
+		jail: true
+		jailfor: true
+		unjail: true
+		kick: true
+		ban: true
+		unban: true
+		block: true
+		unblock: true
+		charban: true
+		charunban: true
+		party: [true,true]
+		partyoption: [true,true]
+		changeleader: [true,true]
+		guild: [true,true]
+		breakguild: [true,true]
+		changegm: [true,true]
+		guildstorage: [true,true]
+		makeegg: [true,true]
+		hatch: [true,true]
+		pettalk: [true,true]
+		petrename: [true,true]
+		petfriendly: [true,true]
+		pethungry: [true,true]
+	}
+	log_commands: true
+	permissions: {
+		can_trade: true
 		join_chat: true
 		kick_chat: true
-		hide_session: true
+		view_equipment: true
+		show_bossmobs: true
+	}
+},
+{
+	id: 80
+	name: "High GM"
+	inherit: ( "GM" )
+	level: 80
+	commands: {
+		/* not necessary due to all_commands: true */
+	}
+	log_commands: true
+	permissions: {
+		skill_unconditional: true
+		disable_pvm: false
+		can_trade_bounded: true
+		item_unconditional: true
+		all_commands: true
 		who_display_aid: true
-		hack_info: true
-		any_warp: true
-		view_hpmeter: true
+		channel_admin: true
+		command_enable: true
+		bypass_stat_onclone: true
+		bypass_max_stat: true
 	}
 },
 {
 	id: 99
 	name: "Admin"
 	level: 99
-	inherit: ( "Support", "Law Enforcement" )
+	inherit: ( "High GM" )
 	commands: {
 		/* not necessary due to all_commands: true */
 	}
 	log_commands: true
 	permissions: {
-		can_trade: true
-		can_party: true
-		command_enable: true
-		all_skill: false
-		all_equipment: false
-		skill_unconditional: false
+		all_skill: true
+		all_equipment: true
+		hide_session: true
 		use_check: true
 		use_changemaptype: true
-		all_commands: true
-		channel_admin: true
-		can_trade_bounded: true
-		item_unconditional: false
-		bypass_stat_onclone: true
-		bypass_max_stat: true
 		/* all_permission: true */
 	}
 }
