clean-up group update errors

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -117,7 +117,7 @@ groups: (
 {
 	id: 20
 	name: "Support"
-	inherit: ( "Super Player" )
+	inherit: ( "Player" )
 	level: 1
 	commands: {
 		mobinfo: true
@@ -250,7 +250,7 @@ groups: (
 		leave: [true,true]
 		cart: [true,true]
 		clonestat: [true,true]
-		mary: true
+		marry: true
 		divorce: true
 		adopt: true
 		gmotd: true
