gm channel update

--- a/conf/channels.conf
+++ b/conf/channels.conf
@@ -69,7 +69,6 @@ channel_config: {
 		type: "CHAN_TYPE_PUBLIC"
 		delay: 1000
 		autojoin: false
-		leave: false
 	},
 	{
 		name: "#support"
@@ -86,6 +85,19 @@ channel_config: {
 		type: "CHAN_TYPE_PUBLIC"
 		delay: 1000
 		autojoin: false
+	},
+	{
+		name: "#gm"
+		alias: "[GM Channel]"
+		color: "Purple"
+		type: "CHAN_TYPE_PUBLIC"
+		delay: 1000
+		autojoin: true
+		leave: false
+		color_override: false
+		join_notif: true
+		groupid: (50,60,80,99)
+		
 	}
 	)
 
@@ -117,23 +129,5 @@ channel_config: {
 		autojoin: false
 		leave: true
 		chat: true
-	}
-	
-	/**
-	 * Channel config for GM channel
-	 * For the structure, see the 'channels' above
-	 **/
-	gm: {
-		name: "#gm"
-		alias: "[GMchat]"
-		color: "Purple"
-		type: "CHAN_TYPE_PUBLIC"
-		autojoin: true
-		delay: 1000
-		leave: false
-		chat: true
-		color_override: false
-		join_notif: true
-		groupid: (50,60,80,99)
 	}
 }
