--- a/conf/maps_athena.conf
+++ b/conf/maps_athena.conf
@@ -862,21 +862,21 @@ map: 6@tower
 
 // 13.1 Another World
 // -- 2008-05-28sdata_k.gpf
-map: mid_camp
-map: mid_campin
-map: man_fild01
-map: man_fild03
-map: spl_fild02
-map: spl_fild03
-map: moc_fild22b
-map: que_dan01
-map: que_dan02
-map: schg_que01
-map: schg_dun01
-map: arug_que01
-map: arug_dun01
-map: 1@orcs
-map: 2@orcs
+//map: mid_camp
+//map: mid_campin
+//map: man_fild01
+//map: man_fild03
+//map: spl_fild02
+//map: spl_fild03
+//map: moc_fild22b
+//map: que_dan01
+//map: que_dan02
+//map: schg_que01
+//map: schg_dun01
+//map: arug_que01
+//map: arug_dun01
+//map: 1@orcs
+//map: 2@orcs
 
 // Additional Battleground.
 // -- 2008-??-???
@@ -886,34 +886,34 @@ map: bat_c03
 
 // 13.2 Another World
 // -- 2008-11-26
-map: 1@nyd
-map: 2@nyd
-map: nyd_dun01
-map: nyd_dun02
-map: manuk
-map: man_fild02
-map: man_in01
-map: splendide
-map: spl_fild01
-map: spl_in01
-map: spl_in02
+//map: 1@nyd
+//map: 2@nyd
+//map: nyd_dun01
+//map: nyd_dun02
+//map: manuk
+//map: man_fild02
+//map: man_in01
+//map: splendide
+//map: spl_fild01
+//map: spl_in01
+//map: spl_in02
 
 // 3rd Job Maps
 // -- 2009-01-29rdata_k2.gpf
-map: job3_arch01
-map: job3_arch02
-map: job3_arch03
-map: job3_guil01
-map: job3_guil02
-map: job3_guil03
-map: job3_rang01
-map: job3_rang02
-map: job3_rune01
-map: job3_rune02
-map: job3_rune03
-map: job3_war01
-map: job3_war02
-map: jupe_core2
+//map: job3_arch01
+//map: job3_arch02
+//map: job3_arch03
+//map: job3_guil01
+//map: job3_guil02
+//map: job3_guil03
+//map: job3_rang01
+//map: job3_rang02
+//map: job3_rune01
+//map: job3_rune02
+//map: job3_rune03
+//map: job3_war01
+//map: job3_war02
+//map: jupe_core2
 
 // ???
 // -- 2009-05-27rdata_k.gpf
@@ -921,27 +921,27 @@ map: moc_para01
 
 // Brasilis Maps
 // -- 2009-08-05rdata_k.gpf
-map: brasilis
-map: bra_in01
-map: bra_fild01
-map: bra_dun01
-map: bra_dun02
+//map: brasilis
+//map: bra_in01
+//map: bra_fild01
+//map: bra_dun01
+//map: bra_dun02
 
 // ???
 // -- 2009-09-30rdata_k.gpf
-map: s_atelier
+//map: s_atelier
 
 // 13.3 El Discastes
 // -- 2009-12-09rdata_k.gpf
-map: dicastes01
-map: dicastes02
-map: dic_in01
-map: dic_fild01
-map: dic_fild02
-map: dic_dun01
-map: dic_dun02
-map: job3_gen01
-map: job3_sha01
+//map: dicastes01
+//map: dicastes02
+//map: dic_in01
+//map: dic_fild01
+//map: dic_fild02
+//map: dic_dun01
+//map: dic_dun02
+//map: job3_gen01
+//map: job3_sha01
 
 // Localized Event Maps
 //map: evt_zombie
@@ -955,111 +955,111 @@ map: job3_sha01
 
 // 14.1 Bifrost
 // -- 2010-06-09rdata_x.gpf
-map: mora
-map: bif_fild01
-map: bif_fild02
-map: 1@mist
+//map: mora
+//map: bif_fild01
+//map: bif_fild02
+//map: 1@mist
 
 // Dewata Maps
 // -- 2010-09-15rdata_x.gpf
-map: dewata
-map: dew_in01
-map: dew_fild01
-map: dew_dun01
-map: dew_dun02
+//map: dewata
+//map: dew_in01
+//map: dew_fild01
+//map: dew_dun01
+//map: dew_dun02
 
 // ???
 // -- 2010-10-06rdata_x.gpf
-map: que_house_s
+//map: que_house_s
 
 // Malangdo Maps
 // -- 2010-11-03rdata_x.gpf
-map: malangdo
-map: mal_in01
-map: mal_in02
-map: mal_dun01
-map: 1@pump
-map: 2@pump
-map: 1@cash
+//map: malangdo
+//map: mal_in01
+//map: mal_in02
+//map: mal_dun01
+//map: 1@pump
+//map: 2@pump
+//map: 1@cash
 
 // Undersea Tunnel Expansion
 // -- 2010-11-10rdata_x.gpf
-map: iz_dun05
+//map: iz_dun05
 
 // ???
 // -- 2010-12-01data_x.gpf
-map: evt_mobroom
+//map: evt_mobroom
 
 // ???
-map: dic_dun03
+//map: dic_dun03
 //map: mjolnir_04_1
-map: evt_swar_b
-map: evt_swar_r
-map: evt_swar_s
-map: evt_swar_t
+//map: evt_swar_b
+//map: evt_swar_r
+//map: evt_swar_s
+//map: evt_swar_t
 
 // Lighthalzen Dungeon F4, Wolfchev's Laboratory
 // -- 2011-03-16rdata_x.gpf
-map: 1@lhz
-map: lhz_dun04
-map: que_lhz
+//map: 1@lhz
+//map: lhz_dun04
+//map: que_lhz
 
 // Hall Of Abyss
 // -- 2011-06-15rdata_x.gpf
-map: gld2_ald
-map: gld2_gef
-map: gld2_pay
-map: gld2_prt
-map: gld_dun01_2
-map: gld_dun02_2
-map: gld_dun03_2
-map: gld_dun04_2
+//map: gld2_ald
+//map: gld2_gef
+//map: gld2_pay
+//map: gld2_prt
+//map: gld_dun01_2
+//map: gld_dun02_2
+//map: gld_dun03_2
+//map: gld_dun04_2
 
 // Port Malaya
 // -- 2011-08-30rdata_j.gpf
-map: malaya
-map: job_ko
-map: ma_scene01
-map: 1@ma_b
-map: 1@ma_c
-map: 1@ma_h
-map: ma_in01
-map: ma_dun01
-map: ma_fild01
-map: ma_fild02
-map: ma_zif01
-map: ma_zif02
-map: ma_zif03
-map: ma_zif04
-map: ma_zif05
-map: ma_zif06
-map: ma_zif07
-map: ma_zif08
-map: ma_zif09
+//map: malaya
+//map: job_ko
+//map: ma_scene01
+//map: 1@ma_b
+//map: 1@ma_c
+//map: 1@ma_h
+//map: ma_in01
+//map: ma_dun01
+//map: ma_fild01
+//map: ma_fild02
+//map: ma_zif01
+//map: ma_zif02
+//map: ma_zif03
+//map: ma_zif04
+//map: ma_zif05
+//map: ma_zif06
+//map: ma_zif07
+//map: ma_zif08
+//map: ma_zif09
 
 // -- 2011-11-30data_j3.gpf
-map: new_event
+//map: new_event
 
 // 14.2 Eclage
 // -- 2011-11-30rdata_j.gpf
-map: eclage
-map: ecl_fild01
-map: ecl_tdun01
-map: ecl_tdun02
-map: ecl_tdun03
-map: ecl_tdun04
-map: que_avan01
-map: 1@ecl
-map: ecl_in01
-map: ecl_in02
-map: ecl_in03
-map: ecl_in04
-map: ecl_hub01
+//map: eclage
+//map: ecl_fild01
+//map: ecl_tdun01
+//map: ecl_tdun02
+//map: ecl_tdun03
+//map: ecl_tdun04
+//map: que_avan01
+//map: 1@ecl
+//map: ecl_in01
+//map: ecl_in02
+//map: ecl_in03
+//map: ecl_in04
+//map: ecl_hub01
 
 // Pyramids Basement Nightmare Mode
 // -- 2011-11-30rdata_j2.gpf
-map: moc_prydn1
-map: moc_prydn2
+//map: moc_prydn1
+//map: moc_prydn2
 
 // Izlude Novice Tutorials
 // -- 2012-03-07aDataSak_sc.gpf
@@ -1076,134 +1076,134 @@ map: iz_int04
 
 // War of Emperium TE
 // -- 2012-04-18aData_sc.gpf
-map: iz_ac01_a
-map: iz_ac02_a
-map: iz_ac01_b
-map: iz_ac02_b
-map: iz_ac01_c
-map: iz_ac02_c
-map: iz_ac01_d
-map: iz_ac02_d
-map: te_prtcas01
-map: te_prtcas02
-map: te_prtcas03
-map: te_prtcas04
-map: te_prtcas05
-map: te_aldecas1
-map: te_aldecas2
-map: te_aldecas3
-map: te_aldecas4
-map: te_aldecas5
-map: prt_fild08a
-map: prt_fild08b
-map: prt_fild08c
-map: prt_fild08d
-map: izlude_a
-map: izlude_b
-map: izlude_c
-map: izlude_d
-map: te_prt_gld
-map: te_alde_gld
-map: teg_dun01
-map: teg_dun02
+//map: iz_ac01_a
+//map: iz_ac02_a
+//map: iz_ac01_b
+//map: iz_ac02_b
+//map: iz_ac01_c
+//map: iz_ac02_c
+//map: iz_ac01_d
+//map: iz_ac02_d
+//map: te_prtcas01
+//map: te_prtcas02
+//map: te_prtcas03
+//map: te_prtcas04
+//map: te_prtcas05
+//map: te_aldecas1
+//map: te_aldecas2
+//map: te_aldecas3
+//map: te_aldecas4
+//map: te_aldecas5
+//map: prt_fild08a
+//map: prt_fild08b
+//map: prt_fild08c
+//map: prt_fild08d
+//map: izlude_a
+//map: izlude_b
+//map: izlude_c
+//map: izlude_d
+//map: te_prt_gld
+//map: te_alde_gld
+//map: teg_dun01
+//map: teg_dun02
 
 // Glast Heim Memorial Dungeon / Nightmare Mode
 // -- 2012-05-16rData_sc.gpf
-map: 1@gl_k
-map: 2@gl_k
-map: gl_chyard_
-map: gl_cas02_
+//map: 1@gl_k
+//map: 2@gl_k
+//map: gl_chyard_
+//map: gl_cas02_
 
 // -- 2012-06-13rData_sc.gpf
 map: evt_bomb
 
 // Wave Mode Memorial Dungeon
 // -- 2012-07-25rData_sc.gpf
-map: 1@def01
-map: 1@def02
-map: 1@def03
+//map: 1@def01
+//map: 1@def02
+//map: 1@def03
 
 // Heroes' Trails - Part 1
 // -- 2012-08-08rData_sc.gpf
-map: 1@gef
-map: 1@face
-map: 1@sara
-map: 1@gef_in
-map: dali
-map: dali02
+//map: 1@gef
+//map: 1@face
+//map: 1@sara
+//map: 1@gef_in
+//map: dali
+//map: dali02
 
 // Heroes' Trails - Part 2
-map: 1@ge_st
-map: 1@spa
-map: 1@tnm1
-map: 1@tnm2
-map: 1@tnm3
+//map: 1@ge_st
+//map: 1@spa
+//map: 1@tnm1
+//map: 1@tnm2
+//map: 1@tnm3
 
 // EP 14.3
-map: 1@dth1
-map: 1@dth2
-map: 1@dth3
-map: 1@eom
-map: 1@jtb
-map: 1@rev
-map: 1@xm_d
-map: moro_cav
-map: moro_vol
+//map: 1@dth1
+//map: 1@dth2
+//map: 1@dth3
+//map: 1@eom
+//map: 1@jtb
+//map: 1@rev
+//map: 1@xm_d
+//map: moro_cav
+//map: moro_vol
 
 // ???
-map: silk_lair
+//map: silk_lair
 
 // Clock Nightmare Mode
-map: c_tower2_
-map: c_tower3_
+//map: c_tower2_
+//map: c_tower3_
 
 // EP 15.1 Fantasmagorica
-map: 1@mcd
-map: ver_eju
-map: ver_tunn
-map: verus03
-map: verus04
+//map: 1@mcd
+//map: ver_eju
+//map: ver_tunn
+//map: verus03
+//map: verus04
 
 // Rebellion Job Change Map
-map: job_gun
+//map: job_gun
 
 // Heroes' Trails Part III - Airship Assault
-map: 1@air1
-map: 1@air2
-map: 1@glast
+//map: 1@air1
+//map: 1@air2
+//map: 1@glast
 
 // Biochemical Laboratory Nightmare
-map: lhz_dun_n
-map: lhz_d_n2
+//map: lhz_dun_n
+//map: lhz_d_n2
 
 // Copy of Old Glast Heim memorial map
-map: 1@gl_kh
-map: 2@gl_kh
+//map: 1@gl_kh
+//map: 2@gl_kh
 
 // EP 15.2 Memory Record
-map: 1@lab
-map: 1@uns
-map: un_bk_q
-map: un_bunker
-map: un_myst
-map: verus01
-map: verus02
+//map: 1@lab
+//map: 1@uns
+//map: un_bk_q
+//map: un_bunker
+//map: un_myst
+//map: verus01
+//map: verus02
 
 // Paradise Group Market
-map: paramk
+//map: paramk
 
 // Clan memorial
-map: 1@ffp
+//map: 1@ffp
 
 // Infinite memorial
-map: 1@infi
+//map: 1@infi
 
 // EP 16.1 Banquet For Heroes
-map: 1@mir
-map: 2@mir
-map: 1@sthb
-map: 1@sthc
-map: 1@sthd
+//map: 1@mir
+//map: 2@mir
+//map: 1@sthb
+//map: 1@sthc
+//map: 1@sthd
 
 map: prt_cas
 map: prt_cas_q
@@ -1221,79 +1221,79 @@ map: int_land03
 map: int_land04
 
 // Doram
-map: lasagna
-map: lasa_fild01
-map: lasa_fild02
-map: lasa_dun01
-map: lasa_dun02
-map: lasa_dun03
-map: conch_in
-map: lasa_in01
-map: lasa_dun_q
+//map: lasagna
+//map: lasa_fild01
+//map: lasa_fild02
+//map: lasa_dun01
+//map: lasa_dun02
+//map: lasa_dun03
+//map: conch_in
+//map: lasa_in01
+//map: lasa_dun_q
 
 // Pope Memorial Day
-map: 1@pop1
-map: 1@pop2
-map: 1@pop3
+//map: 1@pop1
+//map: 1@pop2
+//map: 1@pop3
 
 // ep16.2
-map: 1@slw
-map: 1@swat
-map: que_swat
-map: slabw01
-map: rebel_in
+//map: 1@slw
+//map: 1@swat
+//map: que_swat
+//map: slabw01
+//map: rebel_in
 
 // Memorial day
-map: 1@md_gef
-map: 1@md_pay
+//map: 1@md_gef
+//map: 1@md_pay
 
 // Localizing Rockridge
-map: har_in01
-map: harboro1
-map: harboro2
-map: rockmi1
-map: rockmi2
-map: rockrdg1
-map: rockrdg2
+//map: har_in01
+//map: harboro1
+//map: harboro2
+//map: rockmi1
+//map: rockmi2
+//map: rockrdg1
+//map: rockrdg2
 
 // Chicken Mode Nightmare Glastheim
-map: 1@gl_k2
-map: 2@gl_k2
+//map: 1@gl_k2
+//map: 2@gl_k2
 
 // Chicken Mode Horror Toy Factory
-map: 1@xm_d2
+//map: 1@xm_d2
 
 // Illusion Payon (Moonlight)
-map: pay_d03_i
+//map: pay_d03_i
 
 // Illusion Geffen (Vampire)
-map: gef_d01_i
+//map: gef_d01_i
 
 // Illusion Ice (Frozen)
-map: ice_d03_i
+//map: ice_d03_i
 
 // Suspicious shipwreck
-map: 1@tre
+//map: 1@tre
 
 // Poring Town
-map: 1@begi
+//map: 1@begi
 
 // Illusion Turtle island (Archery)
-map: tur_d03_i
-map: tur_d04_i
+//map: tur_d03_i
+//map: tur_d04_i
 
 // Volcanic island Korodo
-map: 1@crd
+//map: 1@crd
 
 // ??
-map: ordeal_a00
-map: ordeal_a02
-map: pprontera
+//map: ordeal_a00
+//map: ordeal_a02
+//map: pprontera
 
 // ??
-map: niflxmas
-map: sch_lab
-map: nakhyang
+//map: niflxmas
+//map: sch_lab
+//map: nakhyang
 
 // Noodles Festival July
 map: lasa_sea
@@ -1305,26 +1305,26 @@ map: x_prt
 map: x_ra
 
 // November hunting contest
-map: prt_evt_in
+//map: prt_evt_in
 
 // Welcome Corridor
-map: vis_h01
-map: vis_h02
-map: vis_h03
-map: vis_h04
+//map: vis_h01
+//map: vis_h02
+//map: vis_h03
+//map: vis_h04
 
 // Illusion Teddy Bear Nasarian Empire
-map: ein_d02_i
+//map: ein_d02_i
 
 // Illusion Ruande
-map: com_d02_i
+//map: com_d02_i
 
 // Soul Reaper Job Change
-map: 1@soul
+//map: 1@soul
 
 // Star Emperor Job Change
-map: star_frst
-map: star_in
+//map: star_frst
+//map: star_in
 
 // RWC Maps
 map: 2009rwc_01
