--- a/conf/maps_athena.conf
+++ b/conf/maps_athena.conf
@@ -1076,36 +1076,36 @@ map: iz_int04
 
 // War of Emperium TE
 // -- 2012-04-18aData_sc.gpf
-//map: iz_ac01_a
-//map: iz_ac02_a
-//map: iz_ac01_b
-//map: iz_ac02_b
-//map: iz_ac01_c
-//map: iz_ac02_c
-//map: iz_ac01_d
-//map: iz_ac02_d
-//map: te_prtcas01
-//map: te_prtcas02
-//map: te_prtcas03
-//map: te_prtcas04
-//map: te_prtcas05
-//map: te_aldecas1
-//map: te_aldecas2
-//map: te_aldecas3
-//map: te_aldecas4
-//map: te_aldecas5
-//map: prt_fild08a
-//map: prt_fild08b
-//map: prt_fild08c
-//map: prt_fild08d
-//map: izlude_a
-//map: izlude_b
-//map: izlude_c
-//map: izlude_d
-//map: te_prt_gld
-//map: te_alde_gld
-//map: teg_dun01
-//map: teg_dun02
+map: iz_ac01_a
+map: iz_ac02_a
+map: iz_ac01_b
+map: iz_ac02_b
+map: iz_ac01_c
+map: iz_ac02_c
+map: iz_ac01_d
+map: iz_ac02_d
+map: te_prtcas01
+map: te_prtcas02
+map: te_prtcas03
+map: te_prtcas04
+map: te_prtcas05
+map: te_aldecas1
+map: te_aldecas2
+map: te_aldecas3
+map: te_aldecas4
+map: te_aldecas5
+map: prt_fild08a
+map: prt_fild08b
+map: prt_fild08c
+map: prt_fild08d
+map: izlude_a
+map: izlude_b
+map: izlude_c
+map: izlude_d
+map: te_prt_gld
+map: te_alde_gld
+map: teg_dun01
+map: teg_dun02
 
 // Glast Heim Memorial Dungeon / Nightmare Mode
 // -- 2012-05-16rData_sc.gpf
