--- a/npc/re/scripts_jobs.conf
+++ b/npc/re/scripts_jobs.conf
@@ -15,8 +15,8 @@ npc: npc/re/jobs/1-1e/taekwon.txt
 // - 2-2
 npc: npc/re/jobs/2-2/crusader.txt
 // - 2e
-npc: npc/re/jobs/2e/kagerou_oboro.txt
-npc: npc/re/jobs/2e/rebellion.txt
+//npc: npc/re/jobs/2e/kagerou_oboro.txt
+//npc: npc/re/jobs/2e/rebellion.txt
 // - 3-1
 npc: npc/re/jobs/3-1/archbishop.txt
 npc: npc/re/jobs/3-1/mechanic.txt
@@ -37,7 +37,7 @@ npc: npc/re/jobs/novice/academy.txt
 // npc: npc/re/jobs/novice/novice.txt
 npc: npc/re/jobs/novice/supernovice_ex.txt
 // - Job Repairs
-npc: npc/re/jobs/repair.txt
+//npc: npc/re/jobs/repair.txt
 
 // ------------------------ Skill Quests ------------------------
 npc: npc/re/quests/skills/swordman_skills.txt
